Bug 158513 - FILESAVE PPTX: background lost
Summary: FILESAVE PPTX: background lost
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
24.2.0.0 alpha1+
Hardware: All All
: high major
Assignee: Not Assigned
URL:
Whiteboard: target:24.8.0 target:24.2.0.0.beta2 t...
Keywords: bibisected, bisected, regression
Depends on:
Blocks: PPTX-Images
  Show dependency treegraph
 
Reported: 2023-12-04 12:47 UTC by Gerald Pfeifer
Modified: 2024-05-06 20:46 UTC (History)
5 users (show)

See Also:
Crash report or crash signature:


Attachments
Sample slide (PPTX) (4.70 MB, application/vnd.openxmlformats-officedocument.presentationml.presentation)
2023-12-04 12:47 UTC, Gerald Pfeifer
Details
Visual comparison: before (left) - after (right) (1.77 MB, image/png)
2023-12-04 12:48 UTC, Gerald Pfeifer
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Gerald Pfeifer 2023-12-04 12:47:44 UTC
Created attachment 191220 [details]
Sample slide (PPTX)

1. Open example PPTX in Impress
2. Save from Impress.
3. Open just saved version in Impress again.
4. Observe how the background is gone.

Version: 24.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 9602f8a9318dd4d3409856e2ae06abe96e72b51b
CPU threads: 12; OS: Linux 6.6; UI render: default; VCL: gtk3
Locale: en-US (en_US.UTF-8); UI: en-US
Comment 1 Gerald Pfeifer 2023-12-04 12:48:13 UTC
Created attachment 191221 [details]
Visual comparison: before (left) - after (right)
Comment 2 Gerald Pfeifer 2023-12-04 12:52:06 UTC
It's actually a regression.

Not seen in Version: 7.0.7.0.0+
Build ID: 54e9dd41dc9dd45af12c9346199f601ea4a5994d
CPU threads: 12; OS: Linux 6.6; UI render: default; VCL: gtk3
Locale: en-US (en_US.UTF-8); UI: en-US
TinderBox: Linux-rpm_deb-x86_64@86-TDF, Branch:libreoffice-7-0, Time: 2021-05-07_08:22:18

Not seen in Version: 7.6.3.0.0+ (X86_64) / LibreOffice Community
Build ID: 9c8a1994bea590db7436638580231daf31844fd6
CPU threads: 12; OS: Linux 6.6; UI render: default; VCL: gtk3
Locale: en-US (en_US.UTF-8); UI: en-US
Comment 3 Xisco Faulí 2023-12-04 14:16:57 UTC
Regression introduced by:

author	Henry Castro <hcastro@collabora.com>	2023-10-17 07:42:52 -0400
committer	Henry Castro <hcastro@collabora.com>	2023-10-31 12:01:43 +0100
commit d590f094ccd28ca449eff91692c2178058d5c621 (patch)
tree ca1eee5ed6b2b5cea9e3e1c692763420f06be740
parent b3c12778aa908a147224cc05f3384b3f57d3b394 (diff)
tdf#155512: sd: filter: eppt: add "SlideLayout" property to Slide Master

Bisected with: bibisect-linux64-24.2
 
Adding Cc: to Henry Castro
Comment 4 Henry Castro 2023-12-04 15:09:09 UTC
Thanks I will look at it
Comment 5 Xisco Faulí 2023-12-18 10:11:31 UTC
Using the office-interoperability-tools I found many files affected by this issue.
E.g. attachment 120662 [details] from bug 95932. Increasing importance
Comment 6 Gabor Kelemen (Collabora) 2023-12-19 10:02:07 UTC
Verified in a custom build that this is now solved:

Version: 24.8.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 29b11fa3b5574dc3f42f55b0716f71054030c6c2
CPU threads: 15; OS: Windows 10.0 Build 19045; UI render: Skia/Raster; VCL: win
Locale: hu-HU (hu_HU); UI: en-US
Calc: threaded

after

https://git.libreoffice.org/core/commit/bff76421e234df7246a7f49c71a11432f86e09d1

tdf#157740 FILESAVE PPTX: fix explosion of the number of master slides
Comment 7 Gerald Pfeifer 2023-12-20 08:34:52 UTC
Original reporter here: happy to confirm this as fixed with

  Version: 24.8.0.0.alpha0+ (X86_64) / LibreOffice Community
  Build ID: 78e72be805e9b41617d752e0da8c04b7bf5dd269
  CPU threads: 12; OS: Linux 6.6; UI render: default; VCL: gtk3
  Locale: en-US (en_US.UTF-8); UI: en-US