tdf#158513: Revert "tdf#155512: sd: filter: eppt: add "SlideLayout"

This reverts commit c8d8d3bffec73e965ca3b9b30c4d74515e2d0d4e.

https://bugs.documentfoundation.org/show_bug.cgi?id=158513

1. Open example PPTX in Impress
2. Save from Impress.
3. Open just saved version in Impress again.
4. Observe how the background is gone.

Unit test adjustment:

SdOOXMLExportTest2::testAccentColor()
Now all slide masters are imported, so when saves and reload same
document, the reference theme has changed.

Change-Id: I9cdcb585b1143c2c76feea10fee71d6b83f698df
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/160569
Tested-by: Jenkins CollaboraOffice <jenkinscollaboraoffice@gmail.com>
Reviewed-by: Henry Castro <hcastro@collabora.com>