sd/source/filter/eppt/epptooxml.hxx
@@ -131,8 +131,6 @@ private:
     css::uno::Reference<css::drawing::XShape> GetReferencedPlaceholderXShape(const PlaceholderType eType, PageType ePageType) const;
     void WritePlaceholderReferenceShapes(PowerPointShapeExport& rDML, PageType ePageType);
 
-    long FindEquivalentMasterPage(SdrPage* pMasterPage) const;
-
     /// Should we export as .pptm, ie. do we contain macros?
     bool mbPptm;
 
@@ -142,14 +140,12 @@ private:
     ::sax_fastparser::FSHelperPtr mPresentationFS;
 
     LayoutInfo mLayoutInfo[EPP_LAYOUT_SIZE];
-    std::vector<std::pair<SdrPage*, size_t>> mpSlidesMaster;
     std::vector< ::sax_fastparser::FSHelperPtr > mpSlidesFSArray;
     sal_Int32 mnLayoutFileIdMax;
 
     sal_uInt32 mnSlideIdMax;
     sal_uInt32 mnSlideMasterIdMax;
     sal_uInt32 mnAnimationNodeIdMax;
-    sal_uInt32 mnThemeIdMax;
 
     sal_uInt32 mnDiagramId;
 
